--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Kards</title>
+	<title>Haroon Bakoban</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -43,7 +43,7 @@
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
 	   		<div class="logo">
-		         <a href="index.html">KARDS</a>
+		         <a href="index.html">Haroon Bakoban</a>
 		      </div>		      
 
 		   	<nav id="main-nav-wrap">
@@ -866,8 +866,8 @@
 
    			<h5>Email Me At</h5>
 
-   			<p>someone@kardswebsite.com<br>
-			   	info@kardswebsite.com			     
+   			<p>someone@Haroon Bakobanwebsite.com<br>
+			   	info@Haroon Bakobanwebsite.com			     
 			   </p>
 
    		</div>
