--- a/styles.html
+++ b/styles.html
@@ -59,7 +59,7 @@
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
 	   		<div class="logo">
-		         <a href="index.html">KARDS</a>
+		         <a href="index.html">MENU</a>
 		      </div>		      
 
 		   	<nav id="main-nav-wrap">
@@ -69,8 +69,7 @@
 						<li><a href="index.html#resume" title="">Resume</a></li>
 						<li><a href="index.html#portfolio" title="">Portfolio</a></li>
 						<li><a href="index.html#services" title="">Services</a></li>					
-						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
-						<li><a href="styles.html" title="">Style Demo</a></li>				
+						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>				
 					</ul>
 				</nav>    		
    		</div> <!-- /top-bar --> 
