--- a/index.html
+++ b/index.html
@@ -396,9 +396,9 @@
 	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Clouds</h3>	     					    
+	                     		<h3 class="folio-title">Containerized Flask Application</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Web Design
+		     					       	  Docker (devops)
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
