--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
 
 							As a web framework, it provides greater flexibility, customization, and scalability for simple web applications while remaining highly compatible with cutting-edge technologies.</p>
 
-					      <div class="categories">Web Design</div>			               
+					      <div class="categories">Docker (devops)</div>			               
 					   </div>
 
 			         <div class="link-box">
