--- a/index.html
+++ b/index.html
@@ -405,6 +405,22 @@
 	                  </a>
 	               </div>
 	        		</div> <!-- /folio-item -->
+				
+				<div class="bgrid folio-item">
+						<div class="item-wrap">
+							<img src="images/portfolio/agegender.jpg" alt="Age and Gender Prediction">
+						   <a href="#modal-04" class="overlay">	                  	           
+							  <div class="folio-item-table">
+								  <div class="folio-item-cell">
+											 <h3 class="folio-title">Age and Gender Prediction</h3>	     					    
+											   <span class="folio-types">
+												   Machine Learning
+											 </span>
+										 </div>	                      	
+							  </div>                    
+						   </a>
+						</div>	               
+						 </div> <!-- /folio-item -->	
  
 
 	            <!-- modal popups - begin
@@ -470,6 +486,26 @@
 			         </div>		      
 
 				   </div> <!-- /modal-03 -->
+				</div>    
+
+				<div id="modal-04" class="popup-modal slider mfp-hide">	
+
+					<div class="media">
+						<img src="images/portfolio/modals/m-agegender.jpg" alt="" />
+					</div>      	
+				<div class="description-box">
+				   <h4>Age and Gender Prediction</h4>		      
+				   <p>A simple Machine Learning Project that predicts the Age and Gender of a person by the Data it is given, Learning and improving each time it is given new data. Python was used to implement the model and Gaussian Mixture Models (GMM) was used to represent the distribution of facial patches.. Please click details for full dissertation.</p>
+
+				   <div class="categories">Machine Learning</div>			               
+				</div>
+
+			  <div class="link-box">
+				 <a href="https://drive.google.com/file/d/1n9PGP6O9EqFAGgYtoKwV4CRtaKI43Fqt/view?usp=sharing">Details</a>
+				   <a href="#" class="popup-modal-dismiss">Close</a>
+			  </div>		      
+
+			</div> <!-- /modal-04 -->
 
 
 				   <!-- modal popups - end
