--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Nexon IT academy</h4>
-	   					<p>Trained on Devops tools such as Jenkins, Git and GutHub, Docker and DockerSwarm, Kubernetes, Ansible, Terraform. Used AWS EC2 Servers to integrate the Tools and have hands-on Experience.</p>
+	   					<p>Trained on Devops tools such as Jenkins, Git and GitHub, Docker and DockerSwarm, Kubernetes, Ansible, Terraform. Used AWS EC2 Servers to integrate the Tools and have hands-on Experience.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
