--- a/index.html
+++ b/index.html
@@ -222,6 +222,24 @@
 					</div>
 
 					<div class="timeline-header">
+						<h3>Technical Lvl 2 Specialist</h3>
+						<p>July 2023 - Present</p>
+					</div>
+
+					<div class="timeline-content">
+						<h4>TelePerformance</h4>
+						<p>The Technical Specialist is helping me improve in my Windows and Linux Administration Knowledge, and how to deal with situations effectively.</p>
+					</div>
+
+				</div> <!-- /timeline-block -->
+
+				<div class="timeline-block">
+
+					<div class="timeline-ico">
+						<i class="fa fa-briefcase"></i>
+					</div>
+
+					<div class="timeline-header">
 						<h3>Team Lead and SME</h3>
 						<p>February 2022 - March 2023</p>
 					</div>
