--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
 					<div class="timeline-content">
 						<h4>TelePerformance</h4>
-						<p>The Technical Specialist is helping me improve in my Windows and Linux Administration Knowledge, and how to deal with situations effectively.</p>
+						<p>The Technical Specialist role is helping me improve in my Windows and Linux Administration Knowledge, and how to deal with situations effectively.</p>
 					</div>
 
 				</div> <!-- /timeline-block -->
