--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Haroon Bakoban</title>
+	<title>Haroon Bakoban, Saudi Iqama Status - Transferrable </title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -88,7 +88,6 @@
 
    	<ul class="intro-social">        
          <li><a href="https://github.com/haroonbakoban"><i class="fa fa-github"></i></a></li>
-         <li><a href="https://twitter.com/HaroonBakoban#"><i class="fa fa-twitter"></i></a></li>
          <li><a href="https://www.linkedin.com/in/haroonbakoban/"><i class="fa fa-linkedin"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
@@ -109,9 +108,9 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">I am Haroon Bakoban, an enthusiastic IT professional with a strong background in engineering 
-					and experience in the IT industry. I have a clear understanding of programming, DevOps, and networking, and I am motivated to excel in the Tech industry.
-					 With expertise in DevOps and technical analysis. I am well-equipped for a DevOps engineering position. I have a proven track record of delivering results, recognized for my high work ethic and achievements. My skills in multitasking, organization, and communication, along with fluency in English, Urdu/Hindi, and Arabic, contribute to effective collaboration. I am passionate about continuous learning and staying updated with industry trends.   </p>
+   				<p class="lead">I am Haroon Bakoban, an enthusiastic Front-End Developer with hands-on experience using React.js and Angular to build 
+					responsive and user-friendly websites. Comfortable working with HTML, CSS, JavaScript, and 
+					REST APIs. Quick learner with a strong interest in clean code and modern web technologies.   </p>
    			</div>   			
 
    		</div>   		
@@ -131,7 +130,7 @@
    				</li>
    				<li>
    					<strong>Job:</strong>
-   					<span>DevOps Engineer, Technical Specialist</span>
+   					<span>Software Developer, Technical Specialist</span>
    				</li>
    				<li>
    					<strong>Website:</strong>
@@ -154,15 +153,19 @@
 				<ul class="skill-bars">
 				   <li>
 				   	<div class="progress percent90"><span>90%</span></div>
-				   	<strong>Jenkins</strong>
+				   	<strong>C#</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent85"><span>85%</span></div>
-				   	<strong>Docker</strong>
+				   	<strong>ReactJS</strong>
 				   </li>
 				   <li>
+					<div class="progress percent85"><span>85%</span></div>
+					<strong>HTML</strong>
+				</li>
+				   <li>
 				   	<div class="progress percent70"><span>75%</span></div>
-				   	<strong>Ansible</strong>
+				   	<strong>Angular</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent95"><span>90%</span></div>
@@ -182,7 +185,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-   			<a href="https://drive.google.com/uc?export=download&id=1P_ZjcW0vUcldVxd-e9PWoqlx6Qpb_N2S" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="https://drive.google.com/uc?export=download&id=1bbX4lx7reUzK7ttL8z0kQRvMB6owTHnW/view" title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
 
@@ -199,7 +202,7 @@
    			<h5>Resume</h5>
    			<h1>More of my credentials.</h1>
 
-   			<p class="lead"></p>
+   			<p class="Software Developer (Front end)"></p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -222,13 +225,19 @@
 					</div>
 
 					<div class="timeline-header">
-						<h3>Technical Lvl 2 Specialist</h3>
-						<p>July 2023 - Present</p>
+						<h3>Junior Front End developer</h3>
+						<p>July 2023 - March 2025</p>
 					</div>
 
 					<div class="timeline-content">
 						<h4>TelePerformance</h4>
-						<p>The Technical Specialist role is helping me improve in my Windows and Linux Administration Knowledge, and how to deal with situations effectively.</p>
+						<p>The Junior front end Developer role helped me enhance my skills, such as  ensuring readiness and reducing manual intervention. 
+							• Developed and maintained scalable front-end components using React.js and 
+							Angular for internal CRM and e-commerce platforms. 
+							• Integrated REST APIs and handled dynamic data rendering, state management with 
+							Redux and RxJS. 
+							• Collaborated closely with UI/UX team to implement pixel-perfect layouts using 
+							Tailwind CSS and Bootstrap.</p>
 					</div>
 
 				</div> <!-- /timeline-block -->
@@ -246,7 +255,15 @@
 
 					<div class="timeline-content">
 						<h4>HCL Tech</h4>
-						<p>I was promoted to the Team Lead role and worked as a Subject matter Expert for Technical lvl 1 and lvl 2 Support, Assisting and Training new employees on tools such as jenkins and active directory.</p>
+						<p>Managed and Trained level 1 Service Desk Engineers with Tools such as Unix Shell, 
+							Ticketing tools such as ServiceNow, and Front-End Admin Applications specific 
+							to the organization. 
+							• Took initiative to self-learn C#, Angular, ReactJS, and SQL Server through real-time 
+							project involvement. 
+							• Shadowed senior developers and Built client websites using React and Next.js, 
+							with integrations like Firebase Auth and payment gateways. 
+							• Converted Figma mockups into fully responsive websites and deployed on 
+							Netlify/Vercel. </p>
 					</div>
 
 				</div> <!-- /timeline-block -->
@@ -278,14 +295,19 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Machine Learning Intern</h3>
-	   					<p>May 2018 - July 2018</p>
+	   					<h3>Intern</h3>
+	   					<p>Internship</p>
 	   				</div>
 
 	   				<div class="timeline-content">
 	   					<h4>ExpertsHub</h4>
-	   					<p> Was awarded Best Intern for Creating Twitter Sentiment analysis to make critical predictions, automate reasoning and
-							decisions and calculate optimization algorithms. Prototyped the Twitter sentiment analysis and quickly determined application viability. Implemented Python, Incorporating libraries such as Pandas, NumPy, etc.</p>
+	   					<p> Projects: 
+							E-Commerce Admin Dashboard (React + Redux + Chart.js) 
+							Built an admin panel for inventory and sales analytics. 
+							Integrated secure login, charts, dynamic tables. 
+							Job Portal Web App (Angular + Firebase) 
+							Job seeker & employer dashboard with form validations. 
+							Deployed on Firebase with real-time DB and authentication. </p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -564,16 +586,7 @@
 
 	      	<div class="service">	
 
-	      		<span class="icon"><i class="icon-earth"></i></span>            
-
-	            <div class="service-content">	
-
-	            	 <h3>Cloud Infrastructure</h3>
-
-		            <p class="desc">Efficient cloud infrastructure setup services for your business. I design, configure, and manage scalable and secure cloud environments, enabling seamless data storage, application deployment, and reliable performance
-	         		</p>
-	         		
-	         	</div> 	         	 
+	      		<span class="icon"><i class="icon-earth"></i></span>                     	 
 
 				</div> <!-- /service -->
 
@@ -583,7 +596,7 @@
 
 	            <div class="service-content">	
 
-	            	<h3>DevOps</h3>  
+	            	<h3>Front End Development</h3>  
 
 		            <p class="desc">My DevOps services streamline software delivery, merging development and operations. I can automate processes, manage infrastructure, and ensure efficient collaboration. Benefit from faster deployments, continuous integration and delivery, scalability, and enhanced quality. Experience seamless software development and deployment with my expert DevOps solutions.
 	         		</p>
