--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	   			<h1>I'm Haroon Bakoban.</h1>
 
 	   			<p class="intro-position">
-	   				<span>DevOps Engineer</span>
+	   				<span>Software Developer</span>
 	   			</p>
 
 	   			<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
