--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	   			<h1>I'm Haroon Bakoban.</h1>
 
 	   			<p class="intro-position">
-	   				<span>Software Developer</span>
+	   				<span>IT Technical Support Specialist</span>
 	   			</p>
 
 	   			<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
@@ -108,9 +108,15 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">I am Haroon Bakoban, an enthusiastic Front-End Developer with hands-on experience using React.js and Angular to build 
-					responsive and user-friendly websites. Comfortable working with HTML, CSS, JavaScript, and 
-					REST APIs. Quick learner with a strong interest in clean code and modern web technologies.   </p>
+   				<p class="lead">IT Technical Support Specialist with 3.5+ years of experience in CRM systems, ITSM, and technical support across Windows, Linux, and cloud environments. Skilled in ServiceNow, O365 Administration, Troubleshooting issues across Virtual machines and all Operating systems and their applications. - I am Bilingual in Arabic and English and communicate effectively.
+-I bring Technical Expertise in Active Directory Management, Microsoft Exchange Portal, INTUNE, MDM, Software Installation & Licensing on Windows, macOS, iOS/Android, and am a professional in ServiceNow and similar Ticketing tools. 
+- I work with teams very well and have great understanding of how the ITSM Systems work, different team involvements, Escalations and Collaborations.
+- Expert in Troubleshooting end user issues regarding VMware, O365 Administration, Software issues and Documenting & Monitoring issues using teamwork and Analytical Thinking.
+- Expert in resolving Network issues such as Cisco VPN and Meraki devices, VLAN, Firewall Configurations etc. 
+-Very good in Time management, Communication and Customer Service.
+-Worked as an SME on L2 technical Support for Clients on Servers and Operating systems.
+- Also helped to train and Mentor Onboarding Employees with the company's Systems.
+-Action Oriented and ready to Deliver High quality Technical Services.   </p>
    			</div>   			
 
    		</div>   		
@@ -153,7 +159,7 @@
 				<ul class="skill-bars">
 				   <li>
 				   	<div class="progress percent90"><span>90%</span></div>
-				   	<strong>C#</strong>
+				   	<strong>ITIL</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent85"><span>85%</span></div>
@@ -161,19 +167,19 @@
 				   </li>
 				   <li>
 					<div class="progress percent85"><span>85%</span></div>
-					<strong>HTML</strong>
+					<strong>ServiceNow</strong>
 				</li>
 				   <li>
 				   	<div class="progress percent70"><span>75%</span></div>
-				   	<strong>Angular</strong>
+				   	<strong>O365 Administration</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent95"><span>90%</span></div>
-				   	<strong>git & Github</strong>
+				   	<strong>Active Directory</strong>
 				   </li>
 				   <li>
-					<div class="progress percent95"><span>70%</span></div>
-					<strong>Linux</strong>
+					<div class="progress percent95"><span>95%</span></div>
+					<strong>Arabic and English</strong>
 				</li>
       
 				</ul> <!-- /skill-bars -->		
@@ -202,7 +208,7 @@
    			<h5>Resume</h5>
    			<h1>More of my credentials.</h1>
 
-   			<p class="Software Developer (Front end)"></p>
+   			<p class="IT Specialist"></p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -225,19 +231,23 @@
 					</div>
 
 					<div class="timeline-header">
-						<h3>Junior Front End developer</h3>
+						<h3>IT Specialist</h3>
 						<p>July 2023 - March 2025</p>
 					</div>
 
 					<div class="timeline-content">
 						<h4>TelePerformance</h4>
-						<p>The Junior front end Developer role helped me enhance my skills, such as  ensuring readiness and reducing manual intervention. 
-							• Developed and maintained scalable front-end components using React.js and 
-							Angular for internal CRM and e-commerce platforms. 
-							• Integrated REST APIs and handled dynamic data rendering, state management with 
-							Redux and RxJS. 
-							• Collaborated closely with UI/UX team to implement pixel-perfect layouts using 
-							Tailwind CSS and Bootstrap.</p>
+						<p>• Deployed and managed virtual PCs, licenses, and software permissions via admin tools. 
+• Supported and customized CRM systems, improving adoption by 15% and meeting SLAs. 
+• Automated CRM/database maintenance with SSMS & Python, reducing manual work 20%. 
+• Streamlined employee onboarding with ERF tool automation, reducing manual effort. 
+• Configured and maintained Cisco AnyConnect VPN for secure remote access. 
+• Deployed and troubleshot Avaya Call Manager & IP Office (softphones/desk phones). Resolved VoIP 
+issues (connectivity, call quality, authentication) in Cisco & Avaya. 
+• Monitored infrastructure with Nagios & SolarWinds, achieving 99% uptime, 90% SLA. 
+• Performed L1 troubleshooting for servers, networks (LAN/WAN), and storage; resolved 30% at first level. 
+• Managed Active Directory access/permissions, cutting access-related tickets by 15%. Took on L2 
+diagnostics & escalations, improving response times and reducing downtime.</p>
 					</div>
 
 				</div> <!-- /timeline-block -->
@@ -255,15 +265,11 @@
 
 					<div class="timeline-content">
 						<h4>HCL Tech</h4>
-						<p>Managed and Trained level 1 Service Desk Engineers with Tools such as Unix Shell, 
-							Ticketing tools such as ServiceNow, and Front-End Admin Applications specific 
-							to the organization. 
-							• Took initiative to self-learn C#, Angular, ReactJS, and SQL Server through real-time 
-							project involvement. 
-							• Shadowed senior developers and Built client websites using React and Next.js, 
-							with integrations like Firebase Auth and payment gateways. 
-							• Converted Figma mockups into fully responsive websites and deployed on 
-							Netlify/Vercel. </p>
+						<p>• Trained & mentored L1 engineers on Unix Shell, ServiceNow, and admin tools. 
+• Provided L2 application support in ServiceNow, resolving 95% of cases within SLA. 
+• Customized ServiceNow workflows, reducing ticket resolution time 15%. 
+• Analyzed ServiceNow data, driving 10% efficiency gains through process improvements. 
+• Enhanced chatbot functionality with testing, improving performance. </p>
 					</div>
 
 				</div> <!-- /timeline-block -->
@@ -281,7 +287,12 @@
 
 	   				<div class="timeline-content">
 	   					<h4>HCL Tech</h4>
-	   					<p>Worked as a It technition for problems related to Windows and Linux Operating Systems, as a Lvl 2 Support for Client Company. Using Active Directory tools, and Service Management tools, Installed system updates to address vulnerabilities and reduce security issues.</p>
+	   					<p>• Delivered Level 1 support with 95% first-call resolution, minimizing escalations. 
+• Reduced downtime 20% via proactive monitoring & Python performance scripts. 
+• Managed SQL databases (SSMS), improving query performance by 30% and ensuring integrity. 
+• Automated monitoring & backups with Unix shell scripts, cutting admin effort 20% and boosting resolution 
+speed 30%. 
+• Documented incidents/resolutions, reducing repeat issues by 15%.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -301,13 +312,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>ExpertsHub</h4>
-	   					<p> Projects: 
-							E-Commerce Admin Dashboard (React + Redux + Chart.js) 
-							Built an admin panel for inventory and sales analytics. 
-							Integrated secure login, charts, dynamic tables. 
-							Job Portal Web App (Angular + Firebase) 
-							Job seeker & employer dashboard with form validations. 
-							Deployed on Firebase with real-time DB and authentication. </p>
+	   					<p> Learned Skills such as ITIL, Software Delivery, Project Management, ITSM, ServiceNow </p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -343,7 +348,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Nexon IT academy</h4>
-	   					<p>Trained on Devops tools such as Jenkins, Git and GitHub, Docker and DockerSwarm, Kubernetes, Ansible, Terraform. Used AWS EC2 Servers to integrate the Tools and have hands-on Experience.</p>
+	   					<p>CICD and Principles of ITIL, Devops.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
