--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@ speed 30%.
 	
 	<!-- services Section
    ================================================== -->
-	<section id="services">
+	<!--<section id="services">
 
 		<div class="overlay"></div>
 
@@ -583,9 +583,9 @@ speed 30%.
    			<p class="lead"></p>
 
    		</div>   		
-   	</div> <!-- /section-intro -->
+   	</div>  /section-intro -->
 
-   	<div class="row services-content">
+  <!-- 	<div class="row services-content">
 
    		<div id="owl-slider" class="owl-carousel services-list">
 
@@ -593,9 +593,9 @@ speed 30%.
 
 	      		<span class="icon"><i class="icon-earth"></i></span>                     	 
 
-				</div> <!-- /service -->
+				</div>  /service -->
 
-				<div class="service">	
+			<!--	<div class="service">	
 
 					<span class="icon"><i class="icon-window"></i></span>                          
 
@@ -608,9 +608,9 @@ speed 30%.
 
 	            </div>	                          
 
-			   </div> <!-- /service -->
+			   </div>  /service -->
 
-			   <div class="service">
+			 <!--  <div class="service">
 
 			   	<span class="icon"><i class="icon-paint-brush"></i></span>		            
 
@@ -624,13 +624,13 @@ speed 30%.
 	            </div> 	            	               
               
 
-			   </div> <!-- /service -->
+			   </div>  /service -->
 
 	      </div> <!-- /services-list -->
    		
    	</div> <!-- /services-content -->
 		
-	</section> <!-- /services -->	
+	</section> <!-- /services --> 
 
 
 	<!-- stats Section
